cabal-version:      2.4
name:               haskell-compe
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             unvalley
maintainer:         kirohi.code@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable haskell-compe
    main-is:          Main.hs
    import:           common-all
    other-modules:    Lib
    hs-source-dirs:   app, src
    build-depends:    
        base ^>=4.14.2.0,
        vector == 0.12.3.0,
        bytestring == 0.10.12.0
    default-language: Haskell2010
    ghc-options:      -Wall
